[package]
name = "ocsp-rs"
version = "0.1.0"
authors = ["chen gao<maicallist@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
hex = "0.4"
asn1_der = "0.7"
serde_asn1_der = "0.7"
log = "0.4"
thiserror = "1.0"
