[package]
name = "ocsp-rs"
version = "0.1.0"
authors = ["chen gao<maicallist@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
hex = "0.4"
asn1_der = "0.7"
thiserror = "1.0"
futures = "0.3"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
lazy_static = "1.4"
tracing = "0.1"
tracing-futures = "0.2"
chrono = "0.4"

[dev-dependencies]
tracing-subscriber = { version = "0.2", features = [
    "fmt",
    "env-filter",
    "chrono"
] }
tracing-log = "0.1"
