[package]
name = "ocsp"
description = "An OCSP encoding/decoding lib for Rust"
version = "0.4.0"
authors = ["chen gao<maicallist@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
keywords = ["ocsp", "pki"]
categories = ["cryptography"]
exclude = [".*"]
readme = "README.md"
homepage = "https://github.com/maicallist/ocsp-rs"
repository = "https://github.com/maicallist/ocsp-rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
hex = "0.4"
asn1_der = "0.7"
thiserror = "1.0"
lazy_static = "1.4"
tracing = "0.1"
tracing-futures = "0.2"
chrono = "0.4"
yasna = "0.5.2"

[dev-dependencies]
tracing-subscriber = { version = "0.2", features = [
    "fmt",
    "env-filter",
    "chrono"
] }
tracing-log = "0.1"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
